force-app/main/default/objects/Autopilot_Stream__c/Autopilot_Stream__c.object-meta.xml
<CustomObject>
    <description>Data container for the autopilot streams.</description>
    <label>Autopilot Stream</label>
    <nameField>
        <label>Autopilot Stream Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Autopilot Streams</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>