force-app/main/default/objects/Autopilot_Stream__c/fields/activity_id__c.field-meta.xml
<CustomField>
    <fullName>activity_id__c</fullName>
    <label>activity Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>