force-app/main/default/objects/Autopilot_Stream__c/fields/actor_email__c.field-meta.xml
<CustomField>
    <fullName>actor_email__c</fullName>
    <label>actor email</label>
    <type>Email</type>
</CustomField>