force-app/main/default/objects/Autopilot_Stream__c/fields/actor_id__c.field-meta.xml
<CustomField>
    <fullName>actor_id__c</fullName>
    <label>actor id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>