force-app/main/default/objects/Autopilot_Stream__c/fields/actor_type__c.field-meta.xml
<CustomField>
    <fullName>actor_type__c</fullName>
    <label>actor type</label>
    <length>20</length>
    <type>Text</type>
</CustomField>