force-app/main/default/objects/Autopilot_Stream__c/fields/email__c.field-meta.xml
<CustomField>
    <fullName>email__c</fullName>
    <description>cloned email from actor_email__C</description>
    <label>Email</label>
    <type>Email</type>
</CustomField>