force-app/main/default/objects/Autopilot_Stream__c/fields/ingest_time__c.field-meta.xml
<CustomField>
    <fullName>ingest_time__c</fullName>
    <label>Ingest time</label>
    <length>30</length>
    <type>Text</type>
</CustomField>