force-app/main/default/objects/Autopilot_Stream__c/fields/instance_id__c.field-meta.xml
<CustomField>
    <fullName>instance_id__c</fullName>
    <label>Instance Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>