force-app/main/default/objects/Autopilot_Stream__c/fields/isTouch__c.field-meta.xml
<CustomField>
    <fullName>isTouch__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isTouch</label>
    <type>Checkbox</type>
</CustomField>