force-app/main/default/objects/Autopilot_Stream__c/fields/journey_id__c.field-meta.xml
<CustomField>
    <fullName>journey_id__c</fullName>
    <label>journey id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>