force-app/main/default/objects/Autopilot_Stream__c/fields/journey_name__c.field-meta.xml
<CustomField>
    <fullName>journey_name__c</fullName>
    <label>journey name</label>
    <length>250</length>
    <type>Text</type>
</CustomField>