force-app/main/default/objects/Autopilot_Stream__c/fields/journeyTouchesToDate__c.field-meta.xml
<CustomField>
    <fullName>journeyTouchesToDate__c</fullName>
    <label>journeyTouchesToDate</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>