force-app/main/default/objects/Autopilot_Stream__c/fields/mark_as_read__c.field-meta.xml
<CustomField>
    <fullName>mark_as_read__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Mark as Read</label>
    <type>Checkbox</type>
</CustomField>