force-app/main/default/objects/Autopilot_Stream__c/fields/object_id__c.field-meta.xml
<CustomField>
    <fullName>object_id__c</fullName>
    <label>object id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>