force-app/main/default/objects/Autopilot_Stream__c/fields/object_name__c.field-meta.xml
<CustomField>
    <fullName>object_name__c</fullName>
    <label>object name</label>
    <length>250</length>
    <type>Text</type>
</CustomField>