force-app/main/default/objects/Autopilot_Stream__c/fields/object_type__c.field-meta.xml
<CustomField>
    <fullName>object_type__c</fullName>
    <label>object type</label>
    <length>20</length>
    <type>Text</type>
</CustomField>