force-app/main/default/objects/Autopilot_Stream__c/fields/tags__c.field-meta.xml
<CustomField>
    <fullName>tags__c</fullName>
    <label>tags</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>