force-app/main/default/objects/Autopilot_Stream__c/fields/timestamp__c.field-meta.xml
<CustomField>
    <fullName>timestamp__c</fullName>
    <label>timestamp</label>
    <length>30</length>
    <type>Text</type>
</CustomField>