force-app/main/default/objects/Autopilot_Stream__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>action__c</columns>
    <columns>journey_id__c</columns>
    <columns>object_id__c</columns>
    <columns>activity_id__c</columns>
    <columns>actor_email__c</columns>
    <columns>actor_id__c</columns>
    <columns>actor_type__c</columns>
    <columns>ingest_time__c</columns>
    <columns>instance_id__c</columns>
    <columns>journey_name__c</columns>
    <columns>object_name__c</columns>
    <columns>object_type__c</columns>
    <columns>timestamp__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>